--- a/app/views/cms/dashboard/index.html.erb
+++ b/app/views/cms/dashboard/index.html.erb
@@ -1,13 +1,12 @@
 <% use_page_title "Dashboard" %>
 
-<div class="padded row-fluid clearfix">
-  <h1>Dashboard</h1>
-  <div class="row-fluid">
-    <div class="span6">
-      <%= render :partial => 'tasks' %>
-    </div>
-    <div class="span6">
-      <%= render :partial => 'page_drafts' %>
-    </div>
+<h1 class="page-header">Dashboard</h1>
+
+<div class="row">
+  <div class="col-md-6">
+    <%= render :partial => 'tasks' %>
+  </div>
+  <div class="col-md-6">
+    <%= render :partial => 'page_drafts' %>
   </div>
 </div>
