--- a/app/views/layouts/cms/_head.html.erb
+++ b/app/views/layouts/cms/_head.html.erb
@@ -1,4 +1,6 @@
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><%= page_title %></title>
 <%= stylesheet_link_tag 'cms/application' %>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500,500italic,700italic,700,900italic,900' rel='stylesheet' type='text/css'>
