--- a/app/views/layouts/cms/_main_menu.html.erb
+++ b/app/views/layouts/cms/_main_menu.html.erb
@@ -1,41 +1,35 @@
-<div class="logged-in">
-  <div class="container center-column">
-    <ul class="subnav right">
+<div class="container">
+  <nav class="navbar navbar-default" role="navigation">
+    <ul class="nav navbar-nav">
       <li><%= link_to current_user.full_name, cms.edit_user_path(current_user) unless current_user.guest? %></li>
       <li><%= link_to "Settings", "#" unless current_user.guest? %></li>
       <li><%= link_to "Help", 'https://github.com/browsermedia/browsercms/wiki', target: '_blank' %></li>
       <li><%= link_to "Logout", cms.logout_path unless current_user.guest? %></li>
     </ul>
+  </nav>
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <%= link_to image_tag('cms/logo.png', class: 'navbar-brand'), "/" %>
   </div>
-</div>
-
-<div class="primary-nav">
-  <div class="container center-column">
-    <%= link_to image_tag('cms/logo.png', class: 'main-logo'), "/" %>
-    <ul class="mainnav">
+  <div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
       <% if current_user.able_to?(:edit_content) %>
-      <li>
-        <%= link_to "Dashboard", cms.dashboard_path %>
-        <ul class="dropdown-menu">
-        </ul>
-      </li>
-      <li>
-        <%= link_to "Pages", cms.sitemap_path %>
-      </li>
-      <li>
-
-        <a href="#"
-           class="dropdown-toggle"
-           data-toggle="dropdown">
-          Assets
-          <b class="caret"></b>
-        </a>
+      <li><%= link_to "Dashboard", cms.dashboard_path %></li>
+      <li><%= link_to "Sitemap", cms.sitemap_path %></li>
+      <% end %>
+      <li class="dropdown">
+        <%= link_to 'Library <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
         <%= render partial: 'layouts/cms/content_types', locals: { library: true, id: 'content-library-menu' } %>
       </li>
-      <% end %>
+      
       <% if current_user.able_to? :administrate %>
-      <li>
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+      <li class="dropdown">
+        <%= link_to 'Administration <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
         <ul class="dropdown-menu">
           <%= nav_link_to "Users", cms.users_path %>
           <%= nav_link_to "Groups", cms.groups_path %>
@@ -54,25 +48,23 @@
       </li>
       <% end %>
     </ul>
-
-    <% if current_user.able_to?(:edit_content) %>
-    <div class="btn-group">
-      <%= menu_button "New", new_button_path, id: 'new-content-button', class: 'btn btn-primary', tabindex: '-1' %>
-      <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" tabindex="-1">
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu pull-right">
-        <%= render 'cms/toolbar/new_pages_menu' %>
-        <% modules = Cms::ContentType.available_by_module
-           modules.keys.sort.each_with_index do |module_name, i| %>
-            <%= divider_tag(i) %>
-            <% modules[module_name].each do |type| %>
-                <%= nav_link_to h(type.display_name), new_engine_aware_path(type), id: "create_new_#{type.param_key}" %>
-            <% end -%>
-        <% end %>
-      </ul>
-
-    </div>
-    <% end %>
+    
+    <ul class="nav navbar-nav navbar-right">
+      <% if current_user.able_to?(:edit_content) %>
+      <li class="dropdown">
+        <%= link_to 'New <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
+        <ul class="dropdown-menu">
+          <%= render 'cms/toolbar/new_pages_menu' %>
+          <% modules = Cms::ContentType.available_by_module
+             modules.keys.sort.each_with_index do |module_name, i| %>
+              <%= divider_tag(i) %>
+              <% modules[module_name].each do |type| %>
+                  <%= nav_link_to h(type.display_name), new_engine_aware_path(type), id: "create_new_#{type.param_key}" %>
+              <% end -%>
+          <% end %>
+        </ul>
+      </li>
+      <% end %>
+    </ul>
   </div>
 </div>
