--- a/app/views/layouts/cms/application.html.erb
+++ b/app/views/layouts/cms/application.html.erb
@@ -6,18 +6,16 @@
   <%= render 'layouts/cms/head' %>
 </head>
 <body>
-<nav id="main-nav">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <%= render 'layouts/cms/main_menu' %>
-</nav>
+</div>
 <%= render 'cms/sites/flash' %>
-<section class="container center-column main-container bottom-form-btn clearfix">
+<div class="container">
   <% if content_for?(:before_main_content) %>
       <%= yield :before_main_content  %>
   <% end %>
   <%= yield %>
-  <div class="padded row-fluid">
-    <div class="span12"><%= render :partial => 'layouts/cms/footer' %></div>
-  </div>
-</section>
+  <%= render :partial => 'layouts/cms/footer' %>
+</div>
 </body>
 </html>
