--- a/app/views/cms/dashboard/index.html.erb
+++ b/app/views/cms/dashboard/index.html.erb
@@ -3,10 +3,10 @@
 <h1 class="page-header">Dashboard</h1>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-sm-6">
     <%= render :partial => 'tasks' %>
   </div>
-  <div class="col-md-6">
+  <div class="col-sm-6">
     <%= render :partial => 'page_drafts' %>
   </div>
 </div>
