--- a/app/views/cms/section_nodes/_row_buttons.html.erb
+++ b/app/views/cms/section_nodes/_row_buttons.html.erb
@@ -1,11 +1,13 @@
-<ul class="edit-group">
-  <li><%= link_to 'View', engine_aware_path(section_node.node), class: 'add-link' unless section_node.root? %></li>
-  <li><%= link_to 'Edit', edit_engine_aware_path(section_node.node), class: 'add-link' %></li>
-  <!--<% if section_node.page? %>-->
-  <!--<li><a href="#" class="add-link">Archive</a></li>-->
-  <!--<% end %>-->
-  <!--<li><%= link_to("Hide", "#", class: 'add-link') unless section_node.root? %></li>-->
-  <li><%= link_to 'Remove', engine_aware_path(section_node.node),
-                  class: 'add-link http_delete confirm_with_title',
-                  title: "Are you sure you want to remove #{section_node.node.name}?" if section_node.deletable? %></li>
-</ul>
+<div class="btn-toolbar pull-right" role="toolbar">
+  <div class="btn-group">
+    <%= link_to engine_aware_path(section_node.node), class: 'btn btn-xs btn-default add-link' do %>
+      <span class="glyphicon glyphicon-eye-open"></span>
+    <% end unless section_node.root? %>
+    <%= link_to edit_engine_aware_path(section_node.node), class: 'btn btn-xs btn-default add-link' do %>
+      <span class="glyphicon glyphicon-pencil"></span>
+    <% end %>
+    <%= link_to engine_aware_path(section_node.node), class: 'btn btn-xs btn-default add-link http_delete confirm_with_title', title: "Are you sure you want to remove #{section_node.node.name}?" do %>
+      <span class="glyphicon glyphicon-remove"></span>
+    <% end if section_node.deletable? %>
+  </div>
+</div>
