--- a/app/views/cms/section_nodes/show.html.erb
+++ b/app/views/cms/section_nodes/show.html.erb
@@ -1,9 +1,14 @@
-<%= render 'sitemap_buttons' %>
-<div class="main-content padded row-fluid clearfix">
-  <div id="sitemap">
-    <%= render partial: 'section_node', locals: {section_node: @root_section_node,
-                                                 parent: nil,
-                                                 children: @sitemap[@root_section_node]} %>
+<% use_page_title "Sitemap" %>
+
+<h1 class="page-header"><%= page_title %></h1>
+
+<div class="row">
+  <div class="col-sm-12">
+    <ul class="list-group">
+      <%= render partial: 'section_node', locals: {section_node: @root_section_node,
+                                                   parent: nil,
+                                                   children: @sitemap[@root_section_node]} %>
+    </ul>
   </div>
 </div>
 
