--- a/app/views/cms/application/_main_with_sidebar.html.erb
+++ b/app/views/cms/application/_main_with_sidebar.html.erb
@@ -1,8 +1,8 @@
-<div class="padded row-fluid">
-  <div class="span8 main-content">
+<div class="row">
+  <div class="col-sm-8 main-content">
     <%= yield  %>
   </div>
-  <div class="span4">
+  <div class="col-sm-4">
     <%= yield :sidebar %>
   </div>
 </div>
