--- a/app/views/cms/application/_page_title.html.erb
+++ b/app/views/cms/application/_page_title.html.erb
@@ -1,5 +1,4 @@
-<% span = 'span6' unless local_assigns.has_key? :span %>
-<div class="row-fluid padded">
-  <h1 class="<%= span %>"><%= page_title %></h1>
+<div class="row">
+  <h1 class="page-header"><%= page_title %></h1>
   <%= yield %>
 </div>
