--- a/app/views/cms/pages/_form.html.erb
+++ b/app/views/cms/pages/_form.html.erb
@@ -1,20 +1,25 @@
 <%= simple_form_for(@page) do |f| %>
-    <%= page_title_with_buttons f %>
+    <h1 class="page-header"><%= page_title %></h1>
     <%= render layout: 'main_with_sidebar' do %>
         <%= hidden_field_tag :section_id, @page.section_id %>
         <%= render :partial => 'main_form', :locals => {:f => f} %>
         <% content_for :sidebar do %>
-            <div class="sidebar-block">
-              <h4 class="gray">Status &nbsp; <%= draft_icon_tag(@block, force: true) %></h4>
+          <div class="panel panel-default">
+            <div class="panel-heading">Status</div>
+            <div class="panel-body">
+              <%= draft_icon_tag(@block, force: true) %>
               <% if current_user.able_to?(:publish_content) %>
-                  <h4 class="gray label">Visibility</h4>
-                  <%= f.input :visibility, label: false, collection: @page.visibilities, prompt: false, input_html: {class: 'input-block-level'} %>
+                <h4>Visibility</h4>
+                <%= f.input :visibility, label: false, collection: @page.visibilities, prompt: false, input_html: {class: 'input-block-level'} %>
               <% end %>
             </div>
-            <div class="sidebar-block">
-              <h4 class="gray">Performance Tuning</h4>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">Performance</div>
+            <div class="panel-body">
               <%= f.input :cacheable, label: "Allow Caching?", hint: "Uncheck to allow for personalized content." %>
             </div>
+          </div>
         <% end %>
     <% end %>
     <%= bottom_buttons f %>
