Add SimpleForm browsercms wrapper

--- a/app/views/cms/content_block/index.html.erb
+++ b/app/views/cms/content_block/index.html.erb
@@ -1,34 +1,41 @@
 <% use_page_title "Assets - #{content_type.display_name_plural}" %>
-<div class="padded row-fluid clearfix">
-  <h1 class="span3">Assets</h1>
 
-  <%= form_for @search_filter, url: engine_aware_path(@search_filter.model_class), html: {class: 'form-search'}, method: :get do |f| %>
-      <%= f.text_field :term, class: "span6 search-query right", placeholder: "Search #{content_type.display_name_plural}" %>
+<h1 class="page-header"><%= content_type.display_name_plural%></h1>
+
+<div class="row">
+  <%= form_for @search_filter, url: engine_aware_path(@search_filter.model_class), html: {class: 'col-sm-4 form-search'}, method: :get do |f| %>
+  <div class="input-group">
+    <%= f.text_field :term, class: "form-control search-query right", placeholder: "Search #{content_type.display_name_plural}" %>
+    <span class="input-group-btn">
+      <button class="btn btn-default" type="submit">
+        <span class="glyphicon glyphicon-search"></span>
+      </button>
+    </span>
+  </div>
   <% end %>
-</div>
-<%= form_tag engine_aware_path(@search_filter.path), method: :put do %>
-    <div class="padded row-fluid clearfix">
-      <div class="btn-group span3 top-buttons">
-        <button class="btn btn-small dropdown-toggle btn-solo" data-toggle="dropdown" data-purpose="subheader">
+  <%= form_tag engine_aware_path(@search_filter.path), method: :put, class: 'col-sm-8' do %>
+    <div class="pull-right">
+      <div class="btn-group">
+        <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-purpose="subheader">
           <%= content_type.display_name_plural %> &nbsp;<span class="caret"></span>
         </button>
         <%= render partial: 'layouts/cms/content_types', locals: {library: false, id: 'asset-selector-menu'} %>
       </div>
 
-    <span class="span9 top-buttons">
-        <%= submit_tag "Publish", class: "right btn btn-small btn-primary primary-cta" if content_type.model_class.publishable? %>
+      <%= submit_tag "Publish", class: "right btn btn-small btn-primary primary-cta" if content_type.model_class.publishable? %>
 
-        <div class="btn-group right">
-          <%= submit_tag "Delete", class: 'btn btn-small', data: {confirm: 'Are you sure you want to delete all these records?'} %>
-        </div>
+      <div class="btn-group right">
+        <%= submit_tag "Delete", class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete all these records?'} %>
+      </div>
 
-        <%= yield :bulk_actions if content_for?(:bulk_actions) %>
-        <h4 class="right"><%= @total_number_of_items %> ITEMS</h4>
-    </span>
+      <%= yield :bulk_actions if content_for?(:bulk_actions) %>
     </div>
-
-    <div class="main-content padded row-fluid clearfix">
-      <table class="table table-bordered assets">
+  <% end %>
+</div>
+<div class="row">
+    <div class="col-sm-12">
+      <h4><%= @total_number_of_items %> ITEMS</h4>
+      <table class="table table-striped table-bordered assets">
         <thead>
         <tr>
           <th class="check-cell"><%#<input type="checkbox">
@@ -75,9 +82,9 @@
       </table>
     </div>
 
-<% end %>
 
-<div class='padded row-fluid clearfix'>
+
+<div class='row'>
   <% if !@search_filter.term.blank? && @blocks.size == 0 %>
     <div class="pagination">No results found for '<%= @search_filter.term %>'</div>
   <% elsif @blocks.total_pages > 1 %>
