--- a/app/views/cms/content_block/_block_form.html.erb
+++ b/app/views/cms/content_block/_block_form.html.erb
@@ -5,7 +5,7 @@
     <%= render :partial => 'version_conflict_error', :locals => {:other_version => @other_version, :your_version => @block} if @other_version %>
     <%= render 'hidden_fields', f: f %>
     <div class="row">
-      <div class="col-sm-8 main-content">
+      <div class="col-sm-<%= @block.new_record? ? 12 : 8 %> main-content">
         <div class="panel panel-default">
           <div class="panel-heading">General</div>
           <div class="panel-body">
