--- a/app/views/cms/content_block/show_in_isolation.html.erb
+++ b/app/views/cms/content_block/show_in_isolation.html.erb
@@ -1,6 +1,6 @@
 <% use_page_title "View #{content_type.display_name}" %>
 <%= render layout: 'page_title' do %>
-    <%= link_to 'Edit', edit_engine_aware_path(@block), class: 'btn btn-primary btn-small right' %>
+    <%= link_to 'Edit', edit_engine_aware_path(@block), class: 'btn btn-default' %>
 <% end %>
 <% content_for :sidebar, render('sidebar') %>
 <%= render layout: 'main_with_sidebar' do %>
