Update Devise Forms

--- a/app/assets/stylesheets/cms/application.css.scss
+++ b/app/assets/stylesheets/cms/application.css.scss
@@ -18,7 +18,7 @@ $primary: $main-blue;
 $secondary: $light-blue;
 
 $light: darken(white,6%);
-$gray: #9a9999;
+$gray: #333333;
 $dark: #505050;
 
 $success: #2ecc71;
