--- a/app/views/cms/tags/_form.html.erb
+++ b/app/views/cms/tags/_form.html.erb
@@ -1,1 +1,8 @@
-<%= f.input :name %>
+<div class="panel panel-default">
+  <div class="panel-heading">Tag</div>
+  <div class="panel-body">
+    <div class="col-sm-12">
+      <%= f.input :name %>
+    </div>
+  </div>
+</div>
