--- a/app/views/cms/file_blocks/_form.html.erb
+++ b/app/views/cms/file_blocks/_form.html.erb
@@ -1,3 +1,10 @@
-<%= f.input :name %>
-<%= f.input :file, hint: "Select a file to upload.", as: :file_picker %>
-<%= f.cms_tag_list %>
+<div class="panel panel-default">
+  <div class="panel-heading">File</div>
+  <div class="panel-body">
+    <div class="col-sm-12">
+      <%= f.input :name %>
+      <%= f.input :file, hint: "Select a file to upload.", as: :file_picker %>
+      <%= f.cms_tag_list %>
+    </div>
+  </div>
+</div>
