--- a/app/views/cms/passwords/new.html.erb
+++ b/app/views/cms/passwords/new.html.erb
@@ -1,16 +1,15 @@
 <%# Overrides devise/passwords/new to add CMS specific styles. %>
-<%= render 'cms/application/page_title' %>
+<div class="panel panel-default">
+  <div class="panel-heading">Forgot Password</div>
+  <div class="panel-body">
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+      <%= f.error_notification %>
+      <%= f.input :email, :required => true, :autofocus => true %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-    <%= render layout: 'cms/application/main_with_sidebar' do %>
-        <%= f.error_notification %>
-        <%= f.input :email, :required => true, :autofocus => true %>
-
+      <%= button_menu :bottom do %>
+        <%= f.button :submit, "Send me reset password instructions", class: 'right btn-primary' %>
         <%= render "devise/shared/links" %>
+      <% end %>
     <% end %>
-    <%= render layout: 'cms/application/row' do %>
-        <%= button_menu :bottom do %>
-            <%= f.button :submit, "Send me reset password instructions", class: 'right btn-primary' %>
-        <% end %>
-    <% end %>
-<% end %>
+  </div>
+</div>
