--- a/app/views/cms/sites/_flash.html.erb
+++ b/app/views/cms/sites/_flash.html.erb
@@ -1,7 +1,5 @@
-<%
-   flash.each do |name, msg|
-%>
-    <%= content_tag :div, class: 'flash-message' do %>
+<% flash.each do |name, msg| %>
+    <%= content_tag :div, class: "alert alert-#{name == :alert ? 'danger' : 'success'} alert-dismissable" do %>
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= msg %>
     <% end %>
