--- a/app/views/layouts/cms/_head.html.erb
+++ b/app/views/layouts/cms/_head.html.erb
@@ -3,5 +3,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><%= page_title %></title>
 <%= stylesheet_link_tag 'cms/application' %>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500,500italic,700italic,700,900italic,900' rel='stylesheet' type='text/css'>
 <%= csrf_meta_tags %>
 <%= yield :html_head %>
