--- a/app/views/portlets/portlets/_form.html.erb
+++ b/app/views/portlets/portlets/_form.html.erb
@@ -1,20 +1,27 @@
-<% if @block.class == Cms::Portlet %>
-  <% Cms::Portlet.types.each do |portlet_class|
-    type_code = portlet_class.name.underscore
-  %>
-    <div style="margin-bottom: 20px;">
-      <%
-        link_params = {:type => type_code}
-        unless params[:portlet].blank?
-          link_params["portlet[connect_to_page_id]"] = params[:portlet][:connect_to_page_id]
-          link_params["portlet[connect_to_container]"] = params[:portlet][:connect_to_container]
-        end
+<div class="panel panel-default">
+  <div class="panel-heading">Portlets</div>
+  <ul class="list-group">
+    <% if @block.class == Cms::Portlet %>
+      <% Cms::Portlet.types.each do |portlet_class|
+        type_code = portlet_class.name.underscore
       %>
-      <%= link_to h(portlet_class.name.titleize), new_portlet_path(link_params) %>: <%= portlet_class.description %>
-    </div>
-  <% end %>
-  <% @hide_buttons = true %>
-<% else %>
-  <%= hidden_field_tag :type, @block.class.name.underscore, :id => "portlet_type_field" %>
-  <%= render :partial => @block.class.form, :locals => {:f => f} %>
-<% end %>
+        <li class="list-group-item">
+          <%
+            link_params = {:type => type_code}
+            unless params[:portlet].blank?
+              link_params["portlet[connect_to_page_id]"] = params[:portlet][:connect_to_page_id]
+              link_params["portlet[connect_to_container]"] = params[:portlet][:connect_to_container]
+            end
+          %>
+          <%= link_to "Add", new_portlet_path(link_params), class: "btn btn-default pull-right"%>
+          <%= link_to h(portlet_class.name.titleize), new_portlet_path(link_params) %>
+          <p><%= portlet_class.description %></p>
+        </li>
+      <% end %>
+      <% @hide_buttons = true %>
+    <% else %>
+      <%= hidden_field_tag :type, @block.class.name.underscore, :id => "portlet_type_field" %>
+      <%= render :partial => @block.class.form, :locals => {:f => f} %>
+    <% end %>
+  </ul>
+</div>
