Optimize Portlet Pages

--- a/app/views/cms/categories/_form.html.erb
+++ b/app/views/cms/categories/_form.html.erb
@@ -27,7 +27,7 @@
           </script>
         <% end %>
         <p>Before you can create a category, you must create at least one category type for that category. For example, if you plan to categorize your news releases, you might create a "News Release" category type.</p>
-          <%= link_to "Add a New Category Type", new_category_type_path, class: 'btn btn-primary btn-small' %>
+          <%= link_to "Add a New Category Type", new_category_type_path, class: 'btn btn-default' %>
       <% end %>
     </div>
   </div>
