--- a/app/views/cms/forms/_form.html.erb
+++ b/app/views/cms/forms/_form.html.erb
@@ -62,6 +62,6 @@
 
 <% content_for :sidebar_actions do %>
     <div class="btn-group">
-        <%= link_to "Entries", cms.entries_path(@block), class: "btn btn-small" %>
+      <%= link_to "Entries", cms.entries_path(@block), class: "btn btn-default" %>
     </div>
 <% end %>
