--- a/app/views/cms/content_block/_sidebar.html.erb
+++ b/app/views/cms/content_block/_sidebar.html.erb
@@ -37,7 +37,7 @@
       <%= link_to "Versions", engine(@block).polymorphic_path([:versions, @block]), class: "btn btn-default" if @block.class.versioned? %>
     </div>
     <div class="btn-group">
-      <%= link_to "Delete", engine_aware_path(@block), class: "btn btn-small btn-danger confirm_with_title http_delete", title: "Are you sure you want to delete this content?" %>
+      <%= link_to "Delete", engine_aware_path(@block), class: "btn btn-danger confirm_with_title http_delete", title: "Are you sure you want to delete this content?" %>
     </div>
   </div>
 </div>
