--- a/app/views/cms/sections/_form.html.erb
+++ b/app/views/cms/sections/_form.html.erb
@@ -1,31 +1,43 @@
 <h1 class="page-header"><%= page_title %></h1>
 <div class="row">
-  <div class="col-sm-12">
-    <%= f.input :name, slug_source_if(f.object.new_record?) %>
-    <%= f.input :path, input_html: {class: 'slug-dest', data: {prefix: parent.path}} if parent %>
-    <%= f.input :hidden, label: "Hide from menus?" if parent %>
+  <div class="col-sm-8">
+    <div class="panel panel-default">
+      <div class="panel-heading">Section</div>
+      <div class="panel-body">
+        <%= f.input :name, slug_source_if(f.object.new_record?) %>
+        <%= f.input :path, input_html: {class: 'slug-dest', data: {prefix: parent.path}} if parent %>
+        <%= f.input :hidden, label: "Hide from menus?" if parent %>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
     <%= able_to?(:administrate) do %>
-        <%= f.association :groups,
-                          collection: public_groups,
-                          as: :check_boxes,
-                          label: 'Public Permissions',
-                          input_html: {class: "public_group_ids"},
-                          hint: 'Which "Public" groups can view pages in this section?'
-        %>
-        <div class="check_uncheck">
-          <%= check_uncheck_tag 'input.public_group_ids' %>
+    <div class="panel panel-default">
+      <div class="panel-heading">Permissions</div>
+      <div class="panel-body">
+          <%= f.association :groups,
+                            collection: public_groups,
+                            as: :check_boxes,
+                            label: 'Public Permissions',
+                            input_html: {class: "public_group_ids"},
+                            hint: 'Which "Public" groups can view pages in this section?'
+          %>
+          <div class="check_uncheck">
+            <%= check_uncheck_tag 'input.public_group_ids' %>
+          </div>
+          <hr>
+          <%= f.association :groups,
+                            collection: cms_groups,
+                            as: :check_boxes,
+                            label: 'CMS Permissions',
+                            input_html: {class: "cms_group_ids"},
+                            hint: 'Which "CMS" groups can edit pages and content in this section?'
+          %>
+          <div class="check_uncheck">
+            <%= check_uncheck_tag 'input.cms_group_ids' %>
+          </div>
         </div>
-
-        <%= f.association :groups,
-                          collection: cms_groups,
-                          as: :check_boxes,
-                          label: 'CMS Permissions',
-                          input_html: {class: "cms_group_ids"},
-                          hint: 'Which "CMS" groups can edit pages and content in this section?'
-        %>
-        <div class="check_uncheck">
-          <%= check_uncheck_tag 'input.cms_group_ids' %>
-        </div>
+      </div>
     <% end %>
   </div>
 </div>
