--- a/app/views/cms/pages/_simple_container.html.erb
+++ b/app/views/cms/pages/_simple_container.html.erb
@@ -1,8 +1,9 @@
 <div class="cms-container" data-container="<%= container %>">
-  <%= content %>
-  <%= image_tag "cms/plus.png",
-                :class => 'cms-add-content',
+  <div class="cms-toolbar">
+    <%= link_to "Add", {},
+                :class => 'cms-btn cms-add-content',
                 :data => {:remote => cms.new_page_component_path(:connect_to_page_id => @page, :connect_to_container => name)}
-  %>
+                %>
+  </div>
+  <%= content %>
 </div>
-
