--- a/app/views/cms/content_block/render_block_in_main_container.html.erb
+++ b/app/views/cms/content_block/render_block_in_main_container.html.erb
@@ -1,6 +1,7 @@
 <% if current_user.able_to_edit?(@block) %>
     <% content_for :html_head do %>
         <%= javascript_include_tag 'cms/page_editor' %>
+        <%= stylesheet_link_tag 'cms/page_content_editing' %>
         <%= csrf_meta_tags %>
     <% end %>
 <% end %>
