Update Content Block Index

--- a/app/views/cms/application/_form_with_buttons.html.erb
+++ b/app/views/cms/application/_form_with_buttons.html.erb
@@ -1,9 +1,9 @@
-<%= page_title_with_buttons(f, yield(:buttons)) %>
-<div class="padded row-fluid">
-  <div class="span8 main-content">
+<h1 class="page-header"><%= page_title %></h1>
+<div class="row">
+  <div class="col-sm-8 main-content">
     <%= yield  %>
   </div>
-  <div class="span4">
+  <div class="col-sm-4">
     <%= yield :sidebar %>
   </div>
 </div>
