--- a/app/views/cms/content_block/_block_form.html.erb
+++ b/app/views/cms/content_block/_block_form.html.erb
@@ -11,5 +11,5 @@
     <%= render partial: 'sidebar', layout: 'sidebar_layout' unless @block.new_record? %>
   </div>
   <%= render :partial => "version_conflict_diff", :locals => {:other_version => @other_version, :your_version => @block} if @other_version %>
-  <%= bottom_buttons f %>
+  <%= bottom_buttons f unless @hide_buttons %>
 <% end %>
