--- a/app/assets/stylesheets/cms/application.css.scss
+++ b/app/assets/stylesheets/cms/application.css.scss
@@ -27,10 +27,10 @@ $danger: #e74c3c;
 
 @import "bootstrap";
 @import "sitemap";
+@import "bootflat";
 
 body {
   padding-top: 130px;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
 h1.page-header {
