--- a/app/views/cms/pages/_simple_container.html.erb
+++ b/app/views/cms/pages/_simple_container.html.erb
@@ -4,6 +4,7 @@
                 :class => 'cms-btn cms-add-content',
                 :data => {:remote => cms.new_page_component_path(:connect_to_page_id => @page, :connect_to_container => name)}
                 %>
+    <%= link_to "Add existing", cms.new_connector_path(:page_id => @page, :container => name) , class: "cms-btn" %>
   </div>
   <%= content %>
 </div>
