--- a/app/views/layouts/cms/_main_menu.html.erb
+++ b/app/views/layouts/cms/_main_menu.html.erb
@@ -1,12 +1,15 @@
+<div class="top-navi">
+  <div class="container">
+    <div class="row">
+      <ul class="nav navbar-nav pull-right">
+        <li><%= link_to current_user.full_name, cms.edit_user_path(current_user) unless current_user.guest? %></li>
+        <li><%= link_to "Help", 'https://github.com/browsermedia/browsercms/wiki', target: '_blank' %></li>
+        <li><%= link_to "Logout", cms.logout_path unless current_user.guest? %></li>
+      </ul>
+    </div>
+  </div>
+</div>
 <div class="container">
-  <nav class="navbar navbar-default" role="navigation">
-    <ul class="nav navbar-nav">
-      <li><%= link_to current_user.full_name, cms.edit_user_path(current_user) unless current_user.guest? %></li>
-      <li><%= link_to "Settings", "#" unless current_user.guest? %></li>
-      <li><%= link_to "Help", 'https://github.com/browsermedia/browsercms/wiki', target: '_blank' %></li>
-      <li><%= link_to "Logout", cms.logout_path unless current_user.guest? %></li>
-    </ul>
-  </nav>
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -19,16 +22,32 @@
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <% if current_user.able_to?(:edit_content) %>
-      <li><%= link_to "Dashboard", cms.dashboard_path %></li>
-      <li><%= link_to "Sitemap", cms.sitemap_path %></li>
+      <li>
+        <%= link_to cms.dashboard_path do %>
+          <span class="glyphicon glyphicon-dashboard"></span>
+          Dashboard
+        <% end %>
+      </li>
+      <li>
+        <%= link_to cms.sitemap_path do %>
+          <span class="glyphicon glyphicon-list-alt"></span>
+          Sitemap
+        <% end %>
+      </li>
       <li class="dropdown">
-        <%= link_to 'Library <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
+        <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown" } do %>
+          <span class="glyphicon glyphicon-book"></span>
+          Library <b class="caret"></b>
+        <% end %>
         <%= render partial: 'layouts/cms/content_types', locals: { library: true, id: 'content-library-menu' } %>
       </li>
       <% end %>
       <% if current_user.able_to? :administrate %>
       <li class="dropdown">
-        <%= link_to 'Administration <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
+        <%= link_to '#', class: "dropdown-toggle", data: { toggle: "dropdown" } do %>
+          <span class="glyphicon glyphicon-lock"></span>
+          Administration <b class="caret"></b>
+        <% end %>
         <ul class="dropdown-menu">
           <%= nav_link_to "Users", cms.users_path %>
           <%= nav_link_to "Groups", cms.groups_path %>
@@ -51,7 +70,10 @@
     <ul class="nav navbar-nav navbar-right">
       <% if current_user.able_to?(:edit_content) %>
       <li class="dropdown">
-        <%= link_to 'New <b class="caret"></b>'.html_safe, "#", class: "dropdown-toggle", data: { toggle: "dropdown" } %>
+        <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown" } do %>
+          <span class="glyphicon glyphicon-plus"></span>
+          New <b class="caret"></b>
+        <% end %>
         <ul class="dropdown-menu">
           <%= render 'cms/toolbar/new_pages_menu' %>
           <% modules = Cms::ContentType.available_by_module
