--- a/app/assets/stylesheets/cms/page_editor.css.scss
+++ b/app/assets/stylesheets/cms/page_editor.css.scss
@@ -5,7 +5,8 @@ html, body {
 
 .edit-bar {
   padding: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   .status {
     padding-top: 7px;
   }
