Cancel instead of "Never Mind"

--- a/app/views/cms/forms/_form.html.erb
+++ b/app/views/cms/forms/_form.html.erb
@@ -65,7 +65,7 @@
       </div>
       <div class="modal-footer">
         <a class="btn btn-primary" href="#" id="delete_field" data-dismiss="modal" type="button">Yes. Remove this field.</a>
-        <a aria-hidden="true" class="btn" data-dismiss="modal" href="#" type="button">Never Mind</a>
+        <a aria-hidden="true" class="btn" data-dismiss="modal" href="#" type="button">Cancel</a>
       </div>
     </div>
 <% end %>
