--- a/app/views/cms/attachments/_attachment_manager.html.erb
+++ b/app/views/cms/attachments/_attachment_manager.html.erb
@@ -30,7 +30,7 @@
             <% end %>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Never Mind</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
