--- a/app/views/cms/form_fields/new.html.erb
+++ b/app/views/cms/form_fields/new.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="modal-footer">
   <a class="btn btn-primary" href="#" id="create_field" data-dismiss="modal" type="button">Save</a>
-  <a aria-hidden="true" class="btn" data-dismiss="modal" href="#" type="button">Never Mind</a>
+  <a aria-hidden="true" class="btn" data-dismiss="modal" href="#" type="button">Cancel</a>
 </div>
 
 <%#
