--- a/app/views/cms/application/_add_content_modal.html.erb
+++ b/app/views/cms/application/_add_content_modal.html.erb
@@ -1,3 +1,5 @@
-<div id="modal-add-content" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-content"></div>
+<div id="modal-add-content" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content"></div>
+  </div>
 </div>
