--- a/app/assets/stylesheets/cms/sitemap.css.scss
+++ b/app/assets/stylesheets/cms/sitemap.css.scss
@@ -7,70 +7,85 @@
       display: none;
     }
   }
-}
-
-.list-group {
-  &.hide {
-    display: none;
-  }
-  .list-group-item {
-    padding: 0px;
-    &:before {
+  .list-group {
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    box-shadow: none;
+    margin-bottom: 0px;
+    border-top: 1px solid #ddd;
+    &.hide {
       display: none;
     }
+    .list-group-item {
+      padding: 0px;
+      &:before {
+        display: none;
+      }
+      .list-group-item-span {
+        display: block;
+        clear: both;
+        width: 100%;
+        margin: 0;
+        padding: 5px;
+        .btn-toolbar {
+          width: 150px;
+          .btn-group {
+            float: right;
+          }
+        }
+        .glyphicon {
+          padding-right: 3px;
+        }
+        &:hover {
+          cursor: pointer;
+          background: rgba($gray,0.175);
+        }
+        &.droppable {
+          background: $light-blue;
+          color: white;
+        }
+        &.active {
+          background: rgba($gray,0.4);
+        }
+        .type-icon {
+          vertical-align: top;
+          margin-right: 8px;
+          margin-top: 1px;
+        }
 
-    .list-group-item-span {
-      display: block;
-      clear: both;
-      width: 100%;
-      margin: 0;
-      padding: 5px;
-      &:hover {
-        cursor: pointer;
-        background: rgba($gray,0.175);
-      }
-      &.droppable {
-        background: $light-blue;
-      }
-      &.active {
-        background: rgba($gray,0.4);
-      }
-      .type-icon {
-        vertical-align: top;
-        margin-right: 8px;
-        margin-top: 1px;
-      }
-
-      &.level-2 {
-        padding-left: 30px;
-      }
-      &.level-3 {
-        padding-left: 60px;
-      }
-      &.level-4 {
-        padding-left: 90px;
-      }
-      &.level-5 {
-        padding-left: 120px;
-      }
-      &.level-6 {
-        padding-left: 150px;
-      }
-      &.level-7 {
-        padding-left: 180px;
-      }
-      &.level-8 {
-        padding-left: 210px;
-      }
-      &.level-9 {
-        padding-left: 240px;
-      }
-      &.level-10 {
-        padding-left: 270px;
-      }
-      &.last-item {
-        border-bottom: 0;
+        &.level-2 {
+          padding-left: 30px;
+        }
+        &.level-3 {
+          padding-left: 60px;
+        }
+        &.level-4 {
+          padding-left: 90px;
+        }
+        &.level-5 {
+          padding-left: 120px;
+        }
+        &.level-6 {
+          padding-left: 150px;
+        }
+        &.level-7 {
+          padding-left: 180px;
+        }
+        &.level-8 {
+          padding-left: 210px;
+        }
+        &.level-9 {
+          padding-left: 240px;
+        }
+        &.level-10 {
+          padding-left: 270px;
+        }
+        &.last-item {
+          border-bottom: 0;
+        }
       }
     }
   }
+  
 }
