--- a/app/views/cms/section_nodes/_children.html.erb
+++ b/app/views/cms/section_nodes/_children.html.erb
@@ -1,4 +1,4 @@
-<span class="children <%= initial_visibility_class(parent) %>">
+<span class="children" style="<%= initial_visibility_class(parent) %>">
 <% children.keys.each do |section_node| %>
     <%= render partial: 'section_node', locals: {section_node: section_node, parent: parent, children: children[section_node]} %>
 <% end %>
