--- a/app/views/cms/section_nodes/_status.html.erb
+++ b/app/views/cms/section_nodes/_status.html.erb
@@ -1,3 +1,5 @@
-<%= draft_icon_tag(content) %>
-<%= hidden_icon_tag(content) %>
-<%= guest_accessible_icon_tag(parent, content) %>
+<div class="status-icons pull-right">
+  <%= hidden_icon_tag(content) %>
+  <%= draft_icon_tag(content) %>
+  <%= guest_accessible_icon_tag(parent, content) %>
+</div>
