--- a/app/views/cms/application/_page_title.html.erb
+++ b/app/views/cms/application/_page_title.html.erb
@@ -1,4 +1,6 @@
 <div class="row">
-  <h1 class="page-header"><%= page_title %></h1>
-  <%= yield %>
+  <div class="col-sm-12">
+    <h1 class="page-header"><%= page_title %></h1>
+    <%= yield %>
+  </div>
 </div>
