--- a/app/views/cms/dynamic_views/index.html.erb
+++ b/app/views/cms/dynamic_views/index.html.erb
@@ -1,7 +1,7 @@
 <% use_page_title "#{dynamic_view_type.name.demodulize.titleize.pluralize}" %>
 <%= render layout: 'page_title' do %>
   <p class="pull-right">
-    <%= link_to "Add Partial", new_engine_aware_path(dynamic_view_type), class: 'btn btn-default' %>
+    <%= link_to "Add", new_engine_aware_path(dynamic_view_type), class: 'btn btn-default' %>
   </p>
 <% end %>
 <div class="col-sm-12">
